--- a/config.json
+++ b/config.json
@@ -4,15 +4,16 @@
 		"ip": "0.0.0.0"
 	},
 	"rates": {
-		"pingAll": 3000,
+		"pingAll": 10000,
 		"connectTimeout": 2500
 	},
 	"oldPingsCleanup": {
-		"enabled": false,
+		"enabled": true,
 		"interval": 3600000
 	},
-	"logFailedPings": true,
-	"logToDatabase": false,
-	"graphDuration": 86400000,
-	"serverGraphDuration": 180000
+	"logFailedPings": false,
+	"logToDatabase": true,
+	"graphDuration": 259200000,
+	"serverGraphDuration": 180000,
+	"skipSrvTimeout": 60000
 }
